syntax = "proto3";

package subtitle;

option go_package = "github.com/nandesh-dev/subtle/generated/proto/subtitle";

service SubtitleService {
  rpc GetAvailableExportFormats(GetAvailableExportFormatsRequest) returns (GetAvailableExportFormatsResponse);
  rpc ExportSubtitle(ExportSubtitleRequest) returns (ExportSubtitleResponse);
}

message GetAvailableExportFormatsRequest {}

message GetAvailableExportFormatsResponse {
  repeated string formats = 1;
}

message Subtitle {
  int32 id = 1;

  string title = 2;
  string language = 3;

  bool import_is_external = 4;
  string export_path = 5;
}

message ExportSubtitleRequest {
  int32 subtitle_id = 1;

  string export_directory_path = 2;
  string export_basename = 3;
  string export_format = 4;
}

message ExportSubtitleResponse {}
